@@ -7,12 +7,11 @@ import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.jembi.jempi.libmpi.dgraph.LibDgraph;
-import org.jembi.jempi.libmpi.postgresql.LibPostgresql;
 import org.jembi.jempi.shared.kafka.MyKafkaProducer;
 import org.jembi.jempi.shared.models.*;
 import org.jembi.jempi.shared.serdes.JsonPojoSerializer;
+import org.jembi.jempi.shared.utils.AuditTrailBridge;
 
-import java.sql.Timestamp;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Locale;
@@ -21,8 +20,10 @@ public final class LibMPI {
 
    private static final Logger LOGGER = LogManager.getLogger(LibMPI.class);
    private final LibMPIClientInterface client;
-
    private final MyKafkaProducer<String, AuditEvent> topicAuditEvents;
+   private final AuditTrailBridge auditTrailUtil;
+
+
 
    public LibMPI(
          final Level level,
@@ -36,40 +37,20 @@ public final class LibMPI {
                                                new StringSerializer(),
                                                new JsonPojoSerializer<>(),
                                                kafkaClientId);
+      auditTrailUtil = new AuditTrailBridge(topicAuditEvents);
       client = new LibDgraph(level, host, port);
-   }
-
-   public LibMPI(
-         final String URL,
-         final String USR,
-         final String PSW,
-         final String kafkaBootstrapServers,
-         final String kafkaClientId) {
-      LOGGER.info("{}", "LibMPI Constructor");
-      topicAuditEvents = new MyKafkaProducer<>(kafkaBootstrapServers,
-                                               GlobalConstants.TOPIC_AUDIT_TRAIL,
-                                               new StringSerializer(),
-                                               new JsonPojoSerializer<>(),
-                                               kafkaClientId);
-      client = new LibPostgresql(URL, USR, PSW);
+      client.connect();
    }
 
    private void sendAuditEvent(
          final String interactionID,
          final String goldenID,
-         final String event) {
-      topicAuditEvents.produceAsync(goldenID,
-                                    new AuditEvent(new Timestamp(System.currentTimeMillis()),
-                                                   null,
-                                                   interactionID,
-                                                   goldenID,
-                                                   event),
-                                    ((metadata, exception) -> {
-                                       if (exception != null) {
-                                          LOGGER.error(exception.getLocalizedMessage(), exception);
-                                       }
-                                    }));
+         final String message,
+         final float score,
+         final LinkingRule linkingRule) {
 
+      LinkingAuditEventData linkingEvent = new LinkingAuditEventData(message, interactionID, goldenID, score, linkingRule);
+      auditTrailUtil.sendAuditEvent(GlobalConstants.AuditEventType.LINKING_EVENT, linkingEvent);
    }
 
    /*
@@ -80,15 +61,8 @@ public final class LibMPI {
     * *
     */
 
-   public void startTransaction() {
-      client.startTransaction();
-   }
-
-   public void closeTransaction() {
-      client.closeTransaction();
-   }
-
    public Option<MpiGeneralError> dropAll() {
+      client.connect();
       return client.dropAll();
    }
 
@@ -109,66 +83,97 @@ public final class LibMPI {
     */
 
    public long countInteractions() {
+      client.connect();
       return client.countInteractions();
    }
 
    public long countGoldenRecords() {
+      client.connect();
       return client.countGoldenRecords();
    }
 
+   public List<CustomSourceId> findSourceId(final String facility, final String patient) {
+      client.connect();
+      return client.findSourceId(facility, patient);
+   }
+
+   public List<ExpandedSourceId> findExpandedSourceIdList(final String facility, final String patient) {
+      client.connect();
+      return client.findExpandedSourceIdList(facility, patient);
+   }
 
    public Interaction findInteraction(final String iid) {
+      client.connect();
       return client.findInteraction(iid);
    }
 
    public List<Interaction> findInteraction(final List<String> iidList) {
+      client.connect();
       return client.findInteractions(iidList);
    }
 
    public List<ExpandedInteraction> findExpandedInteractions(final List<String> interactionIDs) {
+      client.connect();
       return client.findExpandedInteractions(interactionIDs);
    }
 
-   public GoldenRecord findGoldenRecord(final String goldenId) {
-      return client.findGoldenRecord(goldenId);
+   public Either<MpiGeneralError, GoldenRecord> findGoldenRecord(final String goldenId) {
+      client.connect();
+      final var records = client.findGoldenRecords(List.of(goldenId));
+      if (records.isRight()) {
+         if (!records.get().isEmpty()) {
+            return Either.right(records.get().getFirst());
+         } else {
+            return Either.left(new MpiServiceError.CRGidDoesNotExistError(goldenId));
+         }
+      }
+      return Either.left(records.getLeft());
    }
 
-   public List<GoldenRecord> findGoldenRecords(final List<String> goldenIds) {
+   public Either<MpiGeneralError, List<GoldenRecord>> findGoldenRecords(final List<String> goldenIds) {
+      client.connect();
       return client.findGoldenRecords(goldenIds);
    }
 
    public ExpandedGoldenRecord findExpandedGoldenRecord(final String goldenId) {
+      client.connect();
       final var records = client.findExpandedGoldenRecords(List.of(goldenId));
       if (!records.isEmpty()) {
-         return records.get(0);
+         return records.getFirst();
       }
       return null;
    }
 
    public List<ExpandedGoldenRecord> findExpandedGoldenRecords(final List<String> goldenIds) {
+      client.connect();
       return client.findExpandedGoldenRecords(goldenIds);
    }
 
    public List<String> findGoldenIds() {
+      client.connect();
       return client.findGoldenIds();
    }
 
    public List<String> fetchGoldenIds(
          final long offset,
          final long length) {
+      client.connect();
       return client.fetchGoldenIds(offset, length);
    }
 
    public List<GoldenRecord> findLinkCandidates(final CustomDemographicData demographicData) {
+      client.connect();
       return client.findLinkCandidates(demographicData);
    }
 
    public List<GoldenRecord> findMatchCandidates(final CustomDemographicData demographicData) {
+      client.connect();
       return client.findMatchCandidates(demographicData);
    }
 
-   public List<GoldenRecord> findGoldenRecords(final ApiModels.ApiCrFindRequest request) {
-      return client.findGoldenRecords(request);
+   public Either<MpiGeneralError, List<GoldenRecord>> apiCrFindGoldenRecords(final ApiModels.ApiCrFindRequest request) {
+      client.connect();
+      return client.apiCrFindGoldenRecords(request);
    }
 
    public LibMPIPaginatedResultSet<ExpandedGoldenRecord> simpleSearchGoldenRecords(
@@ -177,6 +182,7 @@ public final class LibMPI {
          final Integer limit,
          final String sortBy,
          final Boolean sortAsc) {
+      client.connect();
       return client.simpleSearchGoldenRecords(params, offset, limit, sortBy, sortAsc);
    }
 
@@ -186,6 +192,7 @@ public final class LibMPI {
          final Integer limit,
          final String sortBy,
          final Boolean sortAsc) {
+      client.connect();
       return client.customSearchGoldenRecords(params, offset, limit, sortBy, sortAsc);
    }
 
@@ -195,6 +202,7 @@ public final class LibMPI {
          final Integer limit,
          final String sortBy,
          final Boolean sortAsc) {
+      client.connect();
       return client.simpleSearchInteractions(params, offset, limit, sortBy, sortAsc);
    }
 
@@ -204,6 +212,7 @@ public final class LibMPI {
          final Integer limit,
          final String sortBy,
          final Boolean sortAsc) {
+      client.connect();
       return client.customSearchInteractions(params, offset, limit, sortBy, sortAsc);
    }
 
@@ -211,6 +220,7 @@ public final class LibMPI {
          final List<ApiModels.ApiSearchParameter> params,
          final LocalDateTime createdAt,
          final PaginationOptions paginationOptions) {
+      client.connect();
       return client.filterGids(params, createdAt, paginationOptions);
    }
 
@@ -218,6 +228,7 @@ public final class LibMPI {
          final List<ApiModels.ApiSearchParameter> params,
          final LocalDateTime createdAt,
          final PaginationOptions paginationOptions) {
+      client.connect();
       return client.filterGidsWithInteractionCount(params, createdAt, paginationOptions);
    }
 
@@ -234,11 +245,20 @@ public final class LibMPI {
          final String goldenID,
          final float oldScore,
          final float newScore) {
+      client.connect();
       final var result = client.setScore(interactionID, goldenID, newScore);
       if (result) {
-         sendAuditEvent(interactionID, goldenID, String.format(Locale.ROOT, "score: %.5f -> %.5f", oldScore, newScore));
+         sendAuditEvent(interactionID,
+                        goldenID,
+                        String.format(Locale.ROOT, "score: %.5f -> %.5f", oldScore, newScore),
+                        newScore,
+                        LinkingRule.UPDATE);
       } else {
-         sendAuditEvent(interactionID, goldenID, String.format(Locale.ROOT, "set score error: %.5f -> %.5f", oldScore, newScore));
+         sendAuditEvent(interactionID,
+                        goldenID,
+                        String.format(Locale.ROOT, "set score error: %.5f -> %.5f", oldScore, newScore),
+                        newScore,
+                        LinkingRule.UPDATE);
 
       }
       return result;
@@ -248,6 +268,7 @@ public final class LibMPI {
          final String goldenId,
          final String fieldName,
          final String newValue) {
+      client.connect();
       return client.updateGoldenRecordField(goldenId, fieldName, newValue);
    }
 
@@ -258,13 +279,24 @@ public final class LibMPI {
          final String fieldName,
          final String oldValue,
          final String newValue) {
+      client.connect();
       final var result = client.updateGoldenRecordField(goldenId, fieldName, newValue);
       if (result) {
-         sendAuditEvent(interactionId, goldenId, String.format(Locale.ROOT, "%s: '%s' -> '%s'", fieldName, oldValue, newValue));
+         sendAuditEvent(interactionId, goldenId, String.format(Locale.ROOT,
+                                                               "%s: '%s' -> '%s'",
+                                                               fieldName,
+                                                               oldValue,
+                                                               newValue),
+                        -1.0F,
+                        LinkingRule.UPDATE);
       } else {
-         sendAuditEvent(interactionId,
-                        goldenId,
-                        String.format(Locale.ROOT, "%s: error updating '%s' -> '%s'", fieldName, oldValue, newValue));
+         sendAuditEvent(interactionId, goldenId, String.format(Locale.ROOT,
+                                                               "%s: error updating '%s' -> '%s'",
+                                                               fieldName,
+                                                               oldValue,
+                                                               newValue),
+                        -1.0F,
+                        LinkingRule.UPDATE);
       }
       return result;
    }
@@ -272,7 +304,12 @@ public final class LibMPI {
    public Either<MpiGeneralError, LinkInfo> linkToNewGoldenRecord(
          final String currentGoldenId,
          final String interactionId,
-         final float score) {
+         final Float score) {
+      client.connect();
+      if (score == null) {
+         LOGGER.error("Missing score");
+         return Either.left(new MpiServiceError.NoScoreGivenError("Missing Score"));
+      }
       final var result = client.linkToNewGoldenRecord(currentGoldenId, interactionId, score);
       if (result.isRight()) {
          sendAuditEvent(interactionId,
@@ -281,11 +318,15 @@ public final class LibMPI {
                                       "Interaction -> new GoldenID: old(%s) new(%s) [%f]",
                                       currentGoldenId,
                                       result.get().goldenUID(),
-                                      score));
+                                      score), score, LinkingRule.NOTIFICATION);
       } else {
          sendAuditEvent(interactionId,
                         currentGoldenId,
-                        String.format(Locale.ROOT, "Interaction -> update GoldenID error: old(%s) [%f]", currentGoldenId, score));
+                        String.format(Locale.ROOT,
+                                      "Interaction -> update GoldenID error: old(%s) [%f]",
+                                      currentGoldenId, score),
+                        score,
+                        LinkingRule.NOTIFICATION);
       }
       return result;
    }
@@ -294,8 +335,14 @@ public final class LibMPI {
          final String goldenID,
          final String newGoldenID,
          final String interactionID,
-         final float score) {
+         final Float score) {
+      client.connect();
+      if (score == null) {
+         LOGGER.error("No score");
+         return Either.left(new MpiServiceError.NoScoreGivenError("No score"));
+      }
       final var result = client.updateLink(goldenID, newGoldenID, interactionID, score);
+
       if (result.isRight()) {
          sendAuditEvent(interactionID,
                         newGoldenID,
@@ -303,7 +350,7 @@ public final class LibMPI {
                                       "Interaction -> update GoldenID: old(%s) new(%s) [%f]",
                                       goldenID,
                                       newGoldenID,
-                                      score));
+                                      score), score, LinkingRule.NOTIFICATION);
       } else {
          sendAuditEvent(interactionID,
                         newGoldenID,
@@ -311,7 +358,7 @@ public final class LibMPI {
                                       "Interaction -> update GoldenID error: old(%s) new(%s) [%f]",
                                       goldenID,
                                       newGoldenID,
-                                      score));
+                                      score), score, LinkingRule.NOTIFICATION);
       }
       return result;
    }
@@ -320,7 +367,9 @@ public final class LibMPI {
          final Interaction interaction,
          final LibMPIClientInterface.GoldenIdScore goldenIdScore,
          final boolean deterministicValidation,
-         final float probabilisticValidation) {
+         final float probabilisticValidation,
+         final LinkingRule linkingRule) {
+      client.connect();
       final var result = client.createInteractionAndLinkToExistingGoldenRecord(interaction, goldenIdScore);
       if (result != null) {
          sendAuditEvent(result.interactionUID(),
@@ -330,32 +379,56 @@ public final class LibMPI {
                                       + "Probabilistic(%.3f)",
                                       result.score(),
                                       deterministicValidation,
-                                      probabilisticValidation));
+                                      probabilisticValidation), result.score(), linkingRule);
       } else {
          sendAuditEvent(interaction.interactionId(),
                         goldenIdScore.goldenId(),
                         String.format(Locale.ROOT,
                                       "Interaction -> error linking to existing GoldenRecord (%.5f)",
-                                      goldenIdScore.score()));
+                                      goldenIdScore.score()), goldenIdScore.score(), linkingRule);
       }
       return result;
-
    }
 
    public LinkInfo createInteractionAndLinkToClonedGoldenRecord(
          final Interaction interaction,
          final float score) {
+      client.connect();
       final var result = client.createInteractionAndLinkToClonedGoldenRecord(interaction, score);
       if (result != null) {
          sendAuditEvent(result.interactionUID(),
                         result.goldenUID(),
-                        String.format(Locale.ROOT, "Interaction -> New GoldenRecord (%f)", score));
+                        String.format(Locale.ROOT,
+                                      "Interaction -> New GoldenRecord (%f)", score),
+                        score, LinkingRule.NEW);
       } else {
          sendAuditEvent(interaction.interactionId(),
                         null,
-                        String.format(Locale.ROOT, "Interaction -> error linking to new GoldenRecord (%f)", score));
+                        String.format(Locale.ROOT,
+                                      "Interaction -> error linking to new GoldenRecord (%f)", score),
+                        score, LinkingRule.NEW);
       }
       return result;
+   }
+
+   /*
+    * *****************************************************************************
+    * *
+    * Notifications
+    * *****************************************************************************
+    * *
+    */
+
+   public void sendUpdatedNotificationEvent(
+         final String notificationId,
+         final String oldGoldenId,
+         final String currentGoldenId) {
+      final var message = String.format(
+            "Notification -> new GoldenID: old(%s) new(%s), new State: old(OPEN) new(CLOSED)",
+            oldGoldenId,
+            currentGoldenId);
+      final var eventData = new NotificationAuditEventData(message, notificationId);
+      auditTrailUtil.sendAuditEvent(GlobalConstants.AuditEventType.NOTIFICATION_EVENT, eventData);
    }
 
 }
